Fixed alignment of user login and signup pages and rendered a public header that does not link to private pages

--- a/client/src/styles/partials/_global.scss
+++ b/client/src/styles/partials/_global.scss
@@ -34,4 +34,8 @@ html, body, #root {
 
 main {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
